--- a/NewsPaper/templates/account/base.html
+++ b/NewsPaper/templates/account/base.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'flatpages/default.html' %}
+{% load i18n %}
 <html>
     <head>
         <title>{% block head_title %}{% endblock head_title %}</title>
