--- a/NewsPaper/templates/daily_post.html
+++ b/NewsPaper/templates/daily_post.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+{% load i18n %}
+
 <html lang="en">
+
+{% load cache %}
+{% cache 60 menu sidebar %}
+{% endcache %}
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h2>Статьи за последнюю неделю!</h2>
+<h2>Статьи за последнюю неделю</h2>
 <ul>
     {% for post in post %}
         <li><a href="{{ link }}{{ post.get_absolute_url }}">{{ post.title }}</a></li>
