--- a/NewsPaper/templates/flatpages/posto.html
+++ b/NewsPaper/templates/flatpages/posto.html
@@ -1,6 +1,11 @@
 {% extends 'flatpages/default.html' %}
+{% load i18n %}
 
 {% load censor_filters %}
+
+{% load cache %}
+{% cache 60 menu sidebar %}
+{% endcache %}
 
 {% block title %}
 Post
