--- a/NewsPaper/templates/sign/logout.html
+++ b/NewsPaper/templates/sign/logout.html
@@ -1,4 +1,8 @@
 {% extends "main.html" %}
+{% load i18n %}
+{% load cache %}
+{% cache 60 menu sidebar %}
+{% endcache %}
 
 {% block content %}
 <h2> Вы вышли из системы </h2>
